--- a/index.html
+++ b/index.html
@@ -153,6 +153,14 @@
 
   </section>
 
+  <section class="quebra">
+    <blockquote class="quote-externo container">
+      <p>"o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos
+        os detalhes da vida cotidiana"</p>
+      <cite>WILLIAM MORRIS</cite>
+    </blockquote>
+  </section>
+
 </body>
 
 </html>
