--- a/index.html
+++ b/index.html
@@ -160,7 +160,42 @@
       <cite>WILLIAM MORRIS</cite>
     </blockquote>
   </section>
+  <div class="footer">
 
+    <div class="container">
+
+      <div class="grid-8 footer_historia">
+        <h3>Nossa História</h3>
+        <p>"o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos
+          os detalhes da vida cotidiana"</p>
+      </div>
+      <div class="grid-4 footer_contato">
+        <h3>Contato</h3>
+        <ul>
+          <li>- (71) 99273-9759</li>
+          <li>- https://github.com/yanmaiaa</li>
+        </ul>
+      </div>
+      <div class="grid-4 footer_redes">
+
+        <h3>Redes Sociais</h3>
+        <ul>
+          <li><a href="http://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg"
+                alt="facebook"></a></li>
+          <li><a href="http://instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg"
+                alt="facebook"></a></li>
+          <li><a href="http://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="facebook"></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="copy">
+    <div class="container">
+      <p class="grid-16">Bikcraft 2020</p>
+    </div>
+  </div>
+  </footer>
 </body>
 
 </html>
