--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <nav class="header_menu" class="grid-12">
 
         <ul>
-          <li><a href="sobre.htm">Sobre</a></li>
-          <li><a href="produtos.htm">Produtos</a></li>
-          <li><a href="protfolio.htm">Portfólio</a></li>
-          <li><a href="contato.htm">Contato</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="produtos.html">Produtos</a></li>
+          <li><a href="protfolio.html">Portfólio</a></li>
+          <li><a href="contato.html">Contato</a></li>
         </ul>
 
       </nav>
