update - Qualidade Section

--- a/sobre.html
+++ b/sobre.html
@@ -57,6 +57,24 @@
       <img src="img/equipe-bikcraft.jpg" alt="Equipe Bikcraft">
     </div>
   </section>
+  <section class="qualidade container">
+    <h2 class="subtitulo">Qualidade</h2>
+    <img src="img/bikcraft-qualidade.svg" alt="Bikcraft Qualidade">
+    <ul class="qualidade_lista">
+      <li class="grid-1-3">
+        <h3>Durabilidade</h3>
+        <p>Ainda assim, existem dúvidas à respeito de como a necessidade de renovação</p>
+      </li>
+      <li class="grid-1-3">
+        <h3>Design</h3>
+        <p>Ainda assim, existem dúvidas à respeito de como a necessidade de renovação</p>
+      </li>
+      <li class="grid-1-3">
+        <h3>Sustentabilidade</h3>
+        <p>Ainda assim, existem dúvidas à respeito de como a necessidade de renovação</p>
+      </li>
+    </ul>
+  </section>
 </body>
 
 </html>
