Update - Produtos Parte 01

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Bikcraft</title>
+  <title>Bikcraft - Página Inicial</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/grid.css">
