--- a/produtos.html
+++ b/produtos.html
@@ -2,88 +2,82 @@
 <html lang="pt-br">
 
 <head>
-
   <meta charset="utf-8">
-  <title>Bikcraft - Sobre</title>
+  <title>Bikcraft - Produtos</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/sobre.css">
-
+  <link rel="stylesheet" href="css/produtos.css">
 </head>
 
 <body>
   <header class="header">
+
     <div class="container">
       <a href="index.html" class="grid-4">
         <img src="img/bikcraft.svg" alt="Bikcraft">
       </a>
       <nav class="grid-12 header_menu">
+
         <ul>
-          <li><a href="sobre.html" class="menu_ativo">Sobre</a></li>
-          <li><a href="produtos.html">Produtos</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="produtos.html" class="menu_ativo">Produtos</a></li>
           <li><a href="protfolio.html">Portfólio</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
-
       </nav>
     </div>
+
   </header>
-  <section class="introducao-interna interna_sobre">
+
+  <section class="introducao-interna interna_produtos">
+
     <div class="container">
-      <h1>Sobre</h1>
-      <p>conheça mais sobre a bikcraft</p>
+      <h1>Produtos</h1>
+      <p>conheça todos os nossos produtos</p>
     </div>
+
   </section>
-  <section class="missao_sobre container">
-    <div class="grid-10">
-      <h2 class="subtitulo-interno">Historia, Missão e Visão</h2>
-      <p>- O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os
-        detalhes da vida cotidiana. Interesse por todos os detalhes da vida cotidiana.</p>
-      <p>- O verdadeiro segredo da felicidade está em ter um genuíno.
-        interesse por todos os detalhes da vida cotidiana.Interesse por todos os detalhes da vida cotidiana.</p>
+
+  <section class="container produto_item">
+
+    <div class="grid-11">
+      <img src="img/produtos/bikcraft-esporte-1.jpg" alt="Bikcraft Esporte">
+      <h2>Esporte</h2>
     </div>
-    <div class="grid-6">
-      <h2 class="subtitulo-interno">Valores</h2>
+
+    <div class="grid-5 produto_icone"><img src="img/produtos/esporte.svg"></div>
+    <div class="grid-8">
+      <img src="img/produtos/bikcraft-esporte-2.jpg" alt="Bikcraft Esporte">
+    </div>
+
+    <div class="grid-8 produto_info">
+      <p>No mundo atual, a contínua expansão de nossa atividade cumpre um papel
+        essencial na fórmula da gestão inovadora da qual fazemos parte.
+      </p>
       <ul>
-        <li>- Qualidade no processo</li>
-        <li>- Foco no cliente</li>
-        <li>- Diversão</li>
-        <li>- Natureza com sustentabilidade</li>
+        <li>Conforto</li>
+        <li>Velocidade</li>
+        <li>Designer</li>
+        <li>Versatilidade</li>
       </ul>
     </div>
-    <div class="grid-16 foto-equipe">
-      <img src="img/equipe-bikcraft.jpg" alt="Equipe Bikcraft">
-    </div>
+
   </section>
-  <section class="qualidade container">
-    <h2 class="subtitulo">Qualidade</h2>
-    <img src="img/bikcraft-qualidade.svg" alt="Bikcraft Qualidade">
-    <ul class="qualidade_lista">
-      <li class="grid-1-3">
-        <h3>Durabilidade</h3>
-        <p>Ainda assim, existem dúvidas à respeito de como a necessidade de renovação</p>
-      </li>
-      <li class="grid-1-3">
-        <h3>Design</h3>
-        <p>Ainda assim, existem dúvidas à respeito de como a necessidade de renovação</p>
-      </li>
-      <li class="grid-1-3">
-        <h3>Sustentabilidade</h3>
-        <p>Ainda assim, existem dúvidas à respeito de como a necessidade de renovação</p>
-      </li>
-    </ul>
-  </section>
+
   <section class="quebra">
+
     <blockquote class="quote-externo container">
       <p>"o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos
         os detalhes da vida cotidiana"</p>
       <cite>WILLIAM MORRIS</cite>
     </blockquote>
+
   </section>
 
   <footer>
+
     <div class="footer">
 
       <div class="container">
@@ -93,6 +87,7 @@
           <p>"o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos
             os detalhes da vida cotidiana"</p>
         </div>
+
         <div class="grid-4 footer_contato">
           <h3>Contato</h3>
           <ul>
@@ -100,9 +95,9 @@
             <li>- https://github.com/yanmaiaa</li>
           </ul>
         </div>
+
         <div class="grid-4 footer_redes">
           <h3>Redes Sociais</h3>
-
           <ul>
             <li><a href="http://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg"
                   alt="facebook"></a></li>
@@ -114,12 +109,15 @@
         </div>
       </div>
     </div>
+
     <div class="copy">
       <div class="container">
-        <p class="grid-16">Bikcraft 2020</p>
+        <p class="grid-16">Bikcraft 2020 - Alguns direitos reservados.</p>
       </div>
     </div>
+
   </footer>
+
 </body>
 
 </html>
