--- a/produtos.html
+++ b/produtos.html
@@ -66,6 +66,58 @@
 
   </section>
 
+  <section class="container produto_item">
+
+    <div class="grid-11">
+      <img src="img/produtos/bikcraft-passeio-1.jpg" alt="Bikcraft Passeio">
+      <h2>Passeio</h2>
+    </div>
+
+    <div class="grid-5 produto_icone"><img src="img/produtos/passeio.svg"></div>
+    <div class="grid-8">
+      <img src="img/produtos/bikcraft-passeio-2.jpg" alt="Bikcraft Passeio">
+    </div>
+
+    <div class="grid-8 produto_info">
+      <p>No mundo atual, a contínua expansão de nossa atividade cumpre um papel
+        essencial na fórmula da gestão inovadora da qual fazemos parte.
+      </p>
+      <ul>
+        <li>Conforto</li>
+        <li>Velocidade</li>
+        <li>Designer</li>
+        <li>Versatilidade</li>
+      </ul>
+    </div>
+
+  </section>
+
+  <section class="container produto_item">
+
+    <div class="grid-11">
+      <img src="img/produtos/bikcraft-retro-1.jpg" alt="Bikcraft Retrô">
+      <h2>Retrô</h2>
+    </div>
+
+    <div class="grid-5 produto_icone"><img src="img/produtos/retro.svg"></div>
+    <div class="grid-8">
+      <img src="img/produtos/bikcraft-retro-2.jpg" alt="Bikcraft Retrô">
+    </div>
+
+    <div class="grid-8 produto_info">
+      <p>No mundo atual, a contínua expansão de nossa atividade cumpre um papel
+        essencial na fórmula da gestão inovadora da qual fazemos parte.
+      </p>
+      <ul>
+        <li>Conforto</li>
+        <li>Velocidade</li>
+        <li>Designer</li>
+        <li>Versatilidade</li>
+      </ul>
+    </div>
+
+  </section>
+
   <section class="quebra">
 
     <blockquote class="quote-externo container">
@@ -112,7 +164,7 @@
 
     <div class="copy">
       <div class="container">
-        <p class="grid-16">Bikcraft 2020 - Alguns direitos reservados.</p>
+        <p class="grid-16">Bikcraft 2020</p>
       </div>
     </div>
 
