--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="produtos.html">Produtos</a></li>
-          <li><a href="protfolio.html">Portfólio</a></li>
+          <li><a href="portfolio.html">Portfólio</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
 
