--- a/portfolio.html
+++ b/portfolio.html
@@ -2,15 +2,13 @@
 <html lang="pt-br">
 
 <head>
-
   <meta charset="utf-8">
-  <title>Bikcraft - Sobre</title>
+  <title>Bikcraft - Portfólio</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/sobre.css">
-
+  <link rel="stylesheet" href="css/portfolio.css">
 </head>
 
 <body>
@@ -21,60 +19,41 @@
       </a>
       <nav class="grid-12 header_menu">
         <ul>
-          <li><a href="sobre.html" class="menu_ativo">Sobre</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
           <li><a href="produtos.html">Produtos</a></li>
-          <li><a href="portfolio.html">Portfólio</a></li>
+          <li><a href="portfolio.html" class="menu_ativo">Portfólio</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
 
       </nav>
     </div>
   </header>
-  <section class="introducao-interna interna_sobre">
+  <section class="introducao-interna interna_portfolio">
     <div class="container">
-      <h1>Sobre</h1>
-      <p>conheça mais sobre a bikcraft</p>
+      <h1>Portfólio</h1>
+      <p>conheça os projetos que amamos mostrar</p>
     </div>
   </section>
-  <section class="missao_sobre container">
-    <div class="grid-10">
-      <h2 class="subtitulo-interno">Historia, Missão e Visão</h2>
-      <p>- O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os
-        detalhes da vida cotidiana. Interesse por todos os detalhes da vida cotidiana.</p>
-      <p>- O verdadeiro segredo da felicidade está em ter um genuíno.
-        interesse por todos os detalhes da vida cotidiana.Interesse por todos os detalhes da vida cotidiana.</p>
-    </div>
-    <div class="grid-6">
-      <h2 class="subtitulo-interno">Valores</h2>
-      <ul>
-        <li>- Qualidade no processo</li>
-        <li>- Foco no cliente</li>
-        <li>- Diversão</li>
-        <li>- Natureza com sustentabilidade</li>
+
+  <section class="container">
+    <blockquote class="quote_clientes">
+      <p>"No mundo atual, a contínua expansão de nossa atividade cumpre um papel
+        essencial na formulação da gestão inovadora da qual fazemos parte"
+      </p>
+      <cite>Barbara Moss</cite>
+    </blockquote>
+  </section>
+
+  <section class="portfolio">
+    <div class="container">
+      <ul class="portfolio_lista">
+        <li class="grid-8"><img src="img/portifolio/retro.jpg" alt="Bicicleta Retro"></li>
+        <li class="grid-8"><img src="img/portifolio/passeio.jpg" alt="Bicicleta Passeio"></li>
+        <li class="grid-16"><img src="img/portifolio/esporte.jpg" alt="Bicicleta Esporte"></li>
       </ul>
     </div>
-    <div class="grid-16 foto-equipe">
-      <img src="img/equipe-bikcraft.jpg" alt="Equipe Bikcraft">
-    </div>
   </section>
-  <section class="qualidade container">
-    <h2 class="subtitulo">Qualidade</h2>
-    <img src="img/bikcraft-qualidade.svg" alt="Bikcraft Qualidade">
-    <ul class="qualidade_lista">
-      <li class="grid-1-3">
-        <h3>Durabilidade</h3>
-        <p>Ainda assim, existem dúvidas à respeito de como a necessidade de renovação</p>
-      </li>
-      <li class="grid-1-3">
-        <h3>Design</h3>
-        <p>Ainda assim, existem dúvidas à respeito de como a necessidade de renovação</p>
-      </li>
-      <li class="grid-1-3">
-        <h3>Sustentabilidade</h3>
-        <p>Ainda assim, existem dúvidas à respeito de como a necessidade de renovação</p>
-      </li>
-    </ul>
-  </section>
+
   <section class="quebra">
     <blockquote class="quote-externo container">
       <p>"o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos
@@ -84,10 +63,9 @@
   </section>
 
   <footer>
+
     <div class="footer">
-
       <div class="container">
-
         <div class="grid-8 footer_historia">
           <h3>Nossa História</h3>
           <p>"o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos
@@ -102,7 +80,6 @@
         </div>
         <div class="grid-4 footer_redes">
           <h3>Redes Sociais</h3>
-
           <ul>
             <li><a href="http://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg"
                   alt="facebook"></a></li>
@@ -120,6 +97,7 @@
       </div>
     </div>
   </footer>
+
 </body>
 
 </html>
