--- a/produtos.html
+++ b/produtos.html
@@ -23,7 +23,7 @@
         <ul>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="produtos.html" class="menu_ativo">Produtos</a></li>
-          <li><a href="protfolio.html">Portfólio</a></li>
+          <li><a href="portfolio.html">Portfólio</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
       </nav>
