--- a/contato.html
+++ b/contato.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 
 <head>
+
   <meta charset="utf-8">
   <title>Bikcraft - Contato</title>
   <link rel="stylesheet" href="css/normalize.css">
@@ -9,6 +10,8 @@
   <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/contato.css">
+  <link rel="stylesheet" href="css/responsividade.css">
+
 </head>
 
 <body>
