Responsividade - Página Sobre

--- a/sobre.html
+++ b/sobre.html
@@ -98,7 +98,7 @@
           <h3>Contato</h3>
           <ul>
             <li>- (71) 99273-9759</li>
-            <li>- https://github.com/yanmaiaa</li>
+            <li>- github.com/yanmaiaa</li>
           </ul>
         </div>
         <div class="grid-4 footer_redes">
