--- a/sobre.html
+++ b/sobre.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/sobre.css">
   <link rel="stylesheet" href="css/responsividade.css">
+  <script> document.documentElement.classList.add("js")</script>
 
 </head>
 
@@ -121,6 +122,7 @@
       </div>
     </div>
   </footer>
+
 </body>
 
 </html>
