--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsividade.css">
+  <script> document.documentElement.classList.add("js");</script>
 
 </head>
 
@@ -197,6 +198,8 @@
     </div>
   </div>
   </footer>
+  <script src="./js/simple-slide.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
