--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/portfolio.css">
   <link rel="stylesheet" href="css/responsividade.css">
+  <script> document.documentElement.classList.add("js");</script>
 </head>
 
 <body>
@@ -36,20 +37,36 @@
     </div>
   </section>
 
-  <section class="container">
+  <section class="container" data-slide="quote">
     <blockquote class="quote_clientes">
-      <p>"No mundo atual, a contínua expansão de nossa atividade cumpre um papel
-        essencial na formulação da gestão inovadora da qual fazemos parte"
-      </p>
-      <cite>Barbara Moss</cite>
+      <p>"Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fazemos
+        foi intensificar o meu amor por esta atividade. Recomendo à todos que amo."</p>
+      <cite>Bernardo</cite>
+    </blockquote>
+    <blockquote class="quote_clientes">
+      <p>"Nada melhor do que dar um rolê com minha Bikcraft na orla.
+        Essa é a minha companheira mais fiel, nunca me traiu e está sempre algo
+        minha disposição."</p>
+      <cite>Jhony</cite>
+    </blockquote>
+    <blockquote class="quote_clientes">
+      <p>"Aqueles que ainda não possuem uma Bikcraft, não sabem o que estão
+        perdendo. A precisão é absurda e a velocidade transcendental.
+        Nunca vi nada igual"</p>
+      <cite>William</cite>
     </blockquote>
   </section>
 
   <section class="portfolio">
-    <div class="container">
+    <div class="container" data-slide="portfolio">
       <ul class="portfolio_lista">
         <li class="grid-8"><img src="img/portifolio/retro.jpg" alt="Bicicleta Retro"></li>
         <li class="grid-8"><img src="img/portifolio/passeio.jpg" alt="Bicicleta Passeio"></li>
+        <li class="grid-16"><img src="img/portifolio/esporte.jpg" alt="Bicicleta Esporte"></li>
+      </ul>
+      <ul class="portfolio_lista">
+        <li class="grid-8"><img src="img/portifolio/passeio.jpg" alt="Bicicleta Passeio"></li>
+        <li class="grid-8"><img src="img/portifolio/retro.jpg" alt="Bicicleta Retro"></li>
         <li class="grid-16"><img src="img/portifolio/esporte.jpg" alt="Bicicleta Esporte"></li>
       </ul>
     </div>
@@ -98,7 +115,8 @@
       </div>
     </div>
   </footer>
-
+  <script src="./js/simple-slide.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
