Update - Animacoes Finais

--- a/index.html
+++ b/index.html
@@ -43,23 +43,23 @@
 
     <div class="container">
 
-      <h1>Bicicletas Feitas a Mão</h1>
+      <h1 data-anime="150" class="fadeInDown">Bicicletas Feitas a Mão</h1>
 
-      <blockquote class="quote-externo">
+      <blockquote class="fadeInDown quote-externo" data-anime="300">
         <p>"não tenha nada em sua casa que você não considere útil ou acredita ser bonito"</p>
         <cite>WILLIAM MORRIS</cite>
       </blockquote>
 
-      <a href="produtos.html" class="btn">Orçamento</a>
+      <a data-anime="450" href="produtos.html" class="btn">Orçamento</a>
     </div>
 
   </section>
 
-  <section class="produtos container">
+  <section class="produtos container fadeInDown">
 
-    <h2 class="subtitulo">Produtos</h2>
+    <h2 data-anime="600" class="subtitulo">Produtos</h2>
 
-    <ul class="produtos_lista">
+    <ul class="produtos_lista" data-anime="650">
 
       <li class="grid-1-3">
 
@@ -198,7 +198,7 @@
     </div>
   </div>
   </footer>
-  <script src="./js/simple-slide.js"></script>
+  <script src="./js/simple-anime.js"></script>
   <script src="./js/script.js"></script>
 </body>
 
