--- a/contato.html
+++ b/contato.html
@@ -34,12 +34,12 @@
   </header>
   <section class="introducao-interna interna_contato">
     <div class="container">
-      <h1>Contato</h1>
-      <p>tire suas dúvidas com a gente</p>
+      <h1 data-anime="150" class="fadeInDown">Contato</h1>
+      <p data-anime="300" class="fadeInDown">tire suas dúvidas com a gente</p>
     </div>
   </section>
 
-  <section class="contato container">
+  <section class="contato container fadeInDown" data-anime="300">
     <form id="form_orcamento" class="contato_form grid-8">
       <label for="nome">Nome</label>
       <input type="text" id="nome">
@@ -117,7 +117,8 @@
       </div>
     </div>
   </footer>
-
+  <script src="./js/simple-anime.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
