--- a/portfolio.html
+++ b/portfolio.html
@@ -32,12 +32,12 @@
   </header>
   <section class="introducao-interna interna_portfolio">
     <div class="container">
-      <h1>Portfólio</h1>
-      <p>conheça os projetos que amamos mostrar</p>
+      <h1 data-anime="150" class="fadeInDown">Portfólio</h1>
+      <p data-anime="300" class="fadeInDown">conheça os projetos que amamos mostrar</p>
     </div>
   </section>
 
-  <section class="container" data-slide="quote">
+  <section class="container fadeInDown" data-slide="quote" data-anime="300">
     <blockquote class="quote_clientes">
       <p>"Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fazemos
         foi intensificar o meu amor por esta atividade. Recomendo à todos que amo."</p>
@@ -116,6 +116,7 @@
     </div>
   </footer>
   <script src="./js/simple-slide.js"></script>
+  <script src="./js/simple-anime.js"></script>
   <script src="./js/script.js"></script>
 </body>
 
