--- a/produtos.html
+++ b/produtos.html
@@ -36,13 +36,13 @@
   <section class="introducao-interna interna_produtos">
 
     <div class="container">
-      <h1>Produtos</h1>
-      <p>conheça todos os nossos produtos</p>
+      <h1 data-anime="150" class="fadeInDown">Produtos</h1>
+      <p data-anime="300" class="fadeInDown">conheça todos os nossos produtos</p>
     </div>
 
   </section>
 
-  <section class="container produto_item">
+  <section class="container produto_item fadeInDown" data-anime="450">
 
     <div class="grid-11">
       <img src="img/produtos/bikcraft-esporte-1.jpg" alt="Bikcraft Esporte">
@@ -204,7 +204,8 @@
     </div>
 
   </footer>
-
+  <script src="./js/simple-anime.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
