--- a/sobre.html
+++ b/sobre.html
@@ -34,11 +34,11 @@
   </header>
   <section class="introducao-interna interna_sobre">
     <div class="container">
-      <h1>Sobre</h1>
-      <p>conheça mais sobre a bikcraft</p>
+      <h1 data-anime="150" class="fadeInDown">Sobre</h1>
+      <p data-anime="300" class="fadeInDown">conheça mais sobre a bikcraft</p>
     </div>
   </section>
-  <section class="missao_sobre container">
+  <section data-anime="350" class="missao_sobre container fadeInDown">
     <div class="grid-10">
       <h2 class="subtitulo-interno">Historia, Missão e Visão</h2>
       <p>- O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os
@@ -122,7 +122,8 @@
       </div>
     </div>
   </footer>
-
+  <script src="./js/simple-anime.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
