--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 
   <meta charset="utf-8">
   <title>Bikcraft - Página Inicial</title>
+  <meta name="description" content="Compre  a sua bicicleta personalizada na Bikcraft.
+  Possuímos modelos: Passeio, Esporte e Retrô.">
+  <meta property="og:type" content="" />
+  <meta property="og:title" content="Bikcraft - Bicicletas Personalizadas" />
+  <meta property="og:description" content="Compre  a sua bicicleta personalizada na Bikcraft.
+  Possuímos modelos: Passeio, Esporte e Retrô." />
+  <meta property="og:url" content="http://bikcraft.com" />
+  <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/grid.css">
@@ -63,7 +73,7 @@
 
       <li class="grid-1-3">
 
-        <div class="produtos_icone">
+        <div class="produtos_icone" data-anime="650">
           <img src="img/produtos/passeio.svg" alt="Bikcraft Passeio">
         </div>
 
