--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Bikcraft - Página Inicial</title>
+  <title>Bikcraft - Bicicletas Personalizadas</title>
   <meta name="description" content="Compre  a sua bicicleta personalizada na Bikcraft.
   Possuímos modelos: Passeio, Esporte e Retrô.">
   <meta property="og:type" content="" />
