--- a/produtos.html
+++ b/produtos.html
@@ -3,7 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Bikcraft - Produtos</title>
+  <title>Bikcraft - Nossos Produtos</title>
+  <meta name="description" content="Compre  a sua bicicleta personalizada na Bikcraft.
+  Possuímos modelos: Passeio, Esporte e Retrô.">
+  <meta property="og:type" content="" />
+  <meta property="og:title" content="Bikcraft - Nossos Produtos" />
+  <meta property="og:description" content="Breve texto que ligue ao title da página." />
+  <meta property="og:url" content="http://bikcraft.com/produtos.html" />
+  <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/grid.css">
