--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,14 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Bikcraft - Contato</title>
+  <title>Bikcraft - Nosso Contato</title>
+  <meta name="description" content="Informações sobre o contato com uma breve descrição.">
+  <meta property="og:type" content="" />
+  <meta property="og:title" content="Bikcraft - Nosso Contato" />
+  <meta property="og:description" content="Informações sobre o contato com uma breve descrição." />
+  <meta property="og:url" content="http://bikcraft.com/contato.html" />
+  <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/grid.css">
