--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Bikcraft - Portfólio</title>
+  <title>Bikcraft - Nosso Portfólio</title>
+  <meta name="description" content="Compre  a sua bicicleta personalizada na Bikcraft.
+  Possuímos modelos: Passeio, Esporte e Retrô.">
+  <meta property="og:type" content="" />
+  <meta property="og:title" content="Bikcraft - Nosso Portfólio" />
+  <meta property="og:description" content="Colocar aqui texto que remete à palavra acima
+  de forma breve." />
+  <meta property="og:url" content="http://bikcraft.com/portfolio.html">
+  <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/grid.css">
