--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,16 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Bikcraft - Sobre</title>
+  <title>Bikcraft - Sobre a gente</title>
+  <meta name="description" content="Compre  a sua bicicleta personalizada na Bikcraft.
+  Possuímos modelos: Passeio, Esporte e Retrô.">
+  <meta property="og:type" content="" />
+  <meta property="og:title" content="Bikcraft - Sobre a gente" />
+  <meta property="og:description" content="Texto breve sobre a história." />
+  <meta property="og:url" content="http://bikcraft.com/sobre.html" />
+  <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/grid.css">
