--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE hmtl>
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -15,11 +15,7 @@
   <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="favicon.ico">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/responsividade.css">
   <script> document.documentElement.classList.add("js");</script>
 
 </head>
@@ -35,7 +31,7 @@
         <img src="img/bikcraft.svg" alt="Bikcraft">
       </a>
 
-      <nav class="header_menu" class="grid-12">
+      <nav class="header_menu grid-12">
 
         <ul>
           <li><a href="sobre.html">Sobre</a></li>
@@ -165,48 +161,51 @@
 
   </section>
 
-  <section class="quebra">
+  <div class="quebra">
     <blockquote class="quote-externo container">
       <p>"o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos
         os detalhes da vida cotidiana"</p>
       <cite>WILLIAM MORRIS</cite>
     </blockquote>
-  </section>
-  <div class="footer">
+  </div>
 
-    <div class="container">
+  <footer>
+    <div class="footer">
 
-      <div class="grid-8 footer_historia">
-        <h3>Nossa História</h3>
-        <p>"o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos
-          os detalhes da vida cotidiana"</p>
-      </div>
-      <div class="grid-4 footer_contato">
-        <h3>Contato</h3>
-        <ul>
-          <li>- (71) 99273-9759</li>
-          <li>- github.com/yanmaiaa</li>
-        </ul>
-      </div>
-      <div class="grid-4 footer_redes">
+      <div class="container">
 
-        <h3>Redes Sociais</h3>
-        <ul>
-          <li><a href="http://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg"
-                alt="facebook"></a></li>
-          <li><a href="http://instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg"
-                alt="facebook"></a></li>
-          <li><a href="http://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="facebook"></a>
-          </li>
-        </ul>
+        <div class="grid-8 footer_historia">
+          <h3>Nossa História</h3>
+          <p>"o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos
+            os detalhes da vida cotidiana"</p>
+        </div>
+        <div class="grid-4 footer_contato">
+          <h3>Contato</h3>
+          <ul>
+            <li>- (71) 99273-9759</li>
+            <li>- github.com/yanmaiaa</li>
+          </ul>
+        </div>
+        <div class="grid-4 footer_redes">
+
+          <h3>Redes Sociais</h3>
+          <ul>
+            <li><a href="http://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg"
+                  alt="facebook"></a></li>
+            <li><a href="http://instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg"
+                  alt="instagram"></a></li>
+            <li><a href="http://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg"
+                  alt="facebook"></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="copy">
-    <div class="container">
-      <p class="grid-16">Bikcraft 2020</p>
+    <div class="copy">
+      <div class="container">
+        <p class="grid-16">Bikcraft 2020</p>
+      </div>
     </div>
-  </div>
   </footer>
   <script src="./js/simple-anime.js"></script>
   <script src="./js/script.js"></script>
