--- a/produtos.html
+++ b/produtos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE hmtl>
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -13,12 +13,7 @@
   <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="favicon.ico">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/produtos.css">
-  <link rel="stylesheet" href="css/responsividade.css">
   <script> document.documentElement.classList.add("js")</script>
 </head>
 
@@ -58,7 +53,7 @@
       <h2>Esporte</h2>
     </div>
 
-    <div class="grid-5 produto_icone"><img src="img/produtos/esporte.svg"></div>
+    <div class="grid-5 produto_icone"><img src="img/produtos/esporte.svg" alt="Esporte"></div>
     <div class="grid-8">
       <img src="img/produtos/bikcraft-esporte-2.jpg" alt="Bikcraft Esporte">
     </div>
@@ -84,7 +79,7 @@
       <h2>Passeio</h2>
     </div>
 
-    <div class="grid-5 produto_icone"><img src="img/produtos/passeio.svg"></div>
+    <div class="grid-5 produto_icone"><img src="img/produtos/passeio.svg" alt="Passeio"></div>
     <div class="grid-8">
       <img src="img/produtos/bikcraft-passeio-2.jpg" alt="Bikcraft Passeio">
     </div>
@@ -110,7 +105,7 @@
       <h2>Retrô</h2>
     </div>
 
-    <div class="grid-5 produto_icone"><img src="img/produtos/retro.svg"></div>
+    <div class="grid-5 produto_icone"><img src="img/produtos/retro.svg" alt="Retrô"></div>
     <div class="grid-8">
       <img src="img/produtos/bikcraft-retro-2.jpg" alt="Bikcraft Retrô">
     </div>
@@ -162,7 +157,7 @@
 
   </section>
 
-  <section class="quebra">
+  <div class="quebra">
 
     <blockquote class="quote-externo container">
       <p>"o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos
@@ -170,7 +165,7 @@
       <cite>WILLIAM MORRIS</cite>
     </blockquote>
 
-  </section>
+  </div>
 
   <footer>
 
@@ -198,9 +193,9 @@
             <li><a href="http://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg"
                   alt="facebook"></a></li>
             <li><a href="http://instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg"
-                  alt="facebook"></a></li>
-            <li><a href="http://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg"
-                  alt="facebook"></a></li>
+                  alt="instagram"></a></li>
+            <li><a href="http://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="twitter"></a>
+            </li>
           </ul>
         </div>
       </div>
