--- a/contato.html
+++ b/contato.html
@@ -1,4 +1,4 @@
-<!DOCTYPE hmtl>
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -12,12 +12,8 @@
   <meta property="og:url" content="http://bikcraft.com/contato.html" />
   <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/grid.css">
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/contato.css">
-  <link rel="stylesheet" href="css/responsividade.css">
   <script> document.documentElement.classList.add("js")</script>
 
 </head>
@@ -81,13 +77,13 @@
     <a href="http://google.com" target="_blank" class="grid-16"><img src="img/bik-endereco.jpg" alt="Endereço"></a>
   </section>
 
-  <section class="quebra">
+  <div class="quebra">
     <blockquote class="quote-externo container">
       <p>"o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos
         os detalhes da vida cotidiana"</p>
       <cite>WILLIAM MORRIS</cite>
     </blockquote>
-  </section>
+  </div>
 
   <footer>
     <div class="footer">
@@ -111,9 +107,9 @@
             <li><a href="http://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg"
                   alt="facebook"></a></li>
             <li><a href="http://instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg"
-                  alt="facebook"></a></li>
-            <li><a href="http://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg"
-                  alt="facebook"></a></li>
+                  alt="instagram"></a></li>
+            <li><a href="http://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="twitter"></a>
+            </li>
           </ul>
         </div>
       </div>
