--- a/sobre.html
+++ b/sobre.html
@@ -1,4 +1,4 @@
-<!DOCTYPE hmtl>
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -14,12 +14,7 @@
   <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="favicon.ico">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/sobre.css">
-  <link rel="stylesheet" href="css/responsividade.css">
   <script> document.documentElement.classList.add("js")</script>
 
 </head>
@@ -86,13 +81,14 @@
       </li>
     </ul>
   </section>
-  <section class="quebra">
+
+  <div class="quebra">
     <blockquote class="quote-externo container">
       <p>"o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos
         os detalhes da vida cotidiana"</p>
       <cite>WILLIAM MORRIS</cite>
     </blockquote>
-  </section>
+  </div>
 
   <footer>
     <div class="footer">
@@ -118,9 +114,9 @@
             <li><a href="http://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg"
                   alt="facebook"></a></li>
             <li><a href="http://instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg"
-                  alt="facebook"></a></li>
-            <li><a href="http://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg"
-                  alt="facebook"></a></li>
+                  alt="instagram"></a></li>
+            <li><a href="http://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="twitter"></a>
+            </li>
           </ul>
         </div>
       </div>
